[package]
name = "mdgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdg-sim = { version = "0.9.1", features = ["json"] }
gitignore = "1.0.7"
grep = "0.2.11"
grep-matcher = "0.1.6"
grep-regex = "0.1.11"
grep-searcher = "0.1.11"
iced = { version = "0.9.0", features = ["canvas", "tokio", "debug"] }
walkdir = "2.3.3"
time = { version = "0.3.5", features = ["local-offset"] }
tokio = { version = "1.27.0", features = ["macros", "io-std"] }
# nvim-rs = { version = "0.5.0", features = ["use_tokio"] }
# async-trait = "0.1.68"
# Rsut message parsing
# rmpv = "1.0.0"
log = "0.4.17"
# simplelog = "0.12.1"
log4rs = "1.2.0"
neovim-lib = "0.6.1"
